# coco-rust

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  ROADMAP.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  zensical.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  claude-fix.yml  (+2 more)
cli/: index.html
crates/coco-pyo3/: Cargo.toml  pyproject.toml
crates/coco-pyo3/src/: convert.rs  lib.rs  mask.rs
crates/hotcoco/: Cargo.toml
crates/hotcoco-pyo3/: Cargo.toml  README.md  pyproject.toml
crates/hotcoco-pyo3/data/: bench_objects365.py
crates/hotcoco-pyo3/python/hotcoco/: __init__.py  cli.py
crates/hotcoco-pyo3/src/: convert.rs  lib.rs  mask.rs
crates/hotcoco-pyo3/tests/: test_integrations.py  test_mask_parity.py
crates/hotcoco/src/: coco.rs  convert.rs  eval.rs  healthcheck.rs  lib.rs  mask.rs  types.rs
crates/hotcoco/src/eval/: accumulate.rs  evaluate.rs  mod.rs  slice.rs  summarize.rs
crates/hotcoco/tests/: integration_test.rs
crates/hotcoco/tests/fixtures/: healthcheck_bad.json  healthcheck_quality.json  zero_gt.json
docs/: benchmarks.md  cli.md  index.md  installation.md  python.md  quickstart.md  rust.md
installation/: index.html
python/: index.html
quickstart/: index.html
rust/: index.html
scripts/: adversarial_harness.py  bench.py  bench_fiftyone.py  bench_objects365.py  download_coco.py  download_o365.py  fixture_builder.py  parity.py  parity_lvis.py  parity_tide.py  report.py  test_parity.py
search/: search_index.json
stylesheets/: extra.css
(+47 files in other folders)
