[package]
name = "hotcoco-pyo3"
version = "0.1.0"
edition = "2021"
description = "Python bindings for hotcoco via PyO3"

[lib]
name = "hotcoco"
crate-type = ["cdylib"]

[dependencies]
hotcoco-core = { path = "../hotcoco", package = "hotcoco" }
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
